k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend
  labels:
    app: springboot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-backend
  template:
    metadata:
      labels:
        app: springboot-backend
    spec:
      containers:
        - name: springboot-backend
          image: mariemsayed/springboot-backend-final
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-backend
spec:
  selector:
    app: springboot-backend
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
