k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-mgmt-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          # Backend frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

          # Backend API
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: springboot-backend
                port:
                  number: 8081
